--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,17 @@
 [workspace]
-resolver = "2"
+resolver = "3"
 members = [
     "canonical_abi_converter",
     "canonical_abi_converter_macro",
     "canonical_abi_converter_lib",
 ]
+
+[workspace.package]
+version = "0.0.1"
+edition = "2024"
+license = "AGPL-3.0"
+authors = ["zebreus <zebreus@zebre.us>"]
+repository = "https://github.com/zebreus/canonical_abi_converter"
 
 [workspace.dependencies]
 canonical_abi_converter_macro = { path = "./canonical_abi_converter_macro" }
