--- a/canonical_abi_converter_lib/Cargo.toml
+++ b/canonical_abi_converter_lib/Cargo.toml
@@ -1,6 +1,13 @@
 [package]
 name = "canonical_abi_converter_lib"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+license.workspace = true
+edition.workspace = true
+authors.workspace = true
+repository.workspace = true
+# keywords = []
+# categories = []
+homepage = "https://github.com/zebreus/canonical_abi_converter/tree/main/canonical_abi_converter_lib"
+# description = ""
 
 [dependencies]
