--- a/canonical_abi_converter_lib/Cargo.toml
+++ b/canonical_abi_converter_lib/Cargo.toml
@@ -12,3 +12,7 @@ homepage = "https://github.com/zebreus/canonical_abi_converter/tree/main/canonic
 
 [dependencies]
 bitflags.workspace = true
+
+[dev-dependencies]
+talc = "4.4.2"
+spin = "0.9.8"
